# image-processing-library

./: .clang-format  .gitignore  CMakeLists.txt  README.md  todo.txt
include/image_processor/: api.hpp  error.hpp  filter.hpp  filter_factory.hpp
src/: filter_factory.cpp
src/internal/: api.cpp  image_processor.cpp  image_processor.hpp  task.hpp  utils.cpp  utils.hpp  worker_pool.cpp  worker_pool.hpp
